--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html>
 
-
-
 <html lang="en">
-
-
 
 <head>
 
@@ -150,8 +146,6 @@
 
 </head>
 
-
-
 <body>
 
     <div id="app" class="container mx-auto p-4 flex flex-col h-full">
@@ -210,11 +204,17 @@
 
 
 
-        <div class="input-area">
+        <!-- Area input pesan -->
 
-            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full" />
+        <div class="input-area flex items-center">
 
-            <button @click="sendMessage" class="btn btn-primary mt-2">Kirim</button>
+            <input type="text" v-model="inputMessage" @keyup.enter="sendMessage" placeholder="Ketik pesan..." class="input input-bordered w-full mr-2" />
+
+            <button @click="sendMessage" class="btn p-0" style="background: none; border: none;">
+
+                <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhTi6NNzaNW2TmRd3yJfsqPnq_79qZpPX7oYZrtoM3NxXlcbbY7cBPjmXxpYbSMKfkDq1oFrfL-QdN6OqL_XermC91jdTpUHgTMjL9O3lOF0yXlksrl2mhdFxqe0hbwgH2bfVfwg0Ae9HEQ6ebfdaukrLKXUyKuhyT0XZPjrG8X6-dRQDhhwY1D_q5qTjk/s512/60525.png" alt="Send" class="w-10 h-10" />
+
+            </button>
 
         </div>
 
@@ -423,7 +423,5 @@
     </script>
 
 </body>
-
-
 
 </html>
