--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
         <div class="mb-4 text-left">
 
-            <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">+Chat Baru</button>
+            <button @click="clearChat" class="btn bg-blue-400 hover:bg-blue-500 text-white">Clear Chat</button>
 
         </div>
 
